Configura o layout principal da página inicial

--- a/index.html
+++ b/index.html
@@ -8,39 +8,49 @@
 </head>
 
 <body>
-    <div class="search-div">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-primary my-2 my-sm-0" type="button"> Pesquisar usuário </button>
-    </div>
-    <div class="card user-detail-div">
-        <div class="card-header">
-            Featured
-        </div>
-        <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-    </div>
-    <div class="repo-list-div">
-        <ul class="list-group">
-            <li class="list-group-item">Repository 1</li>
-            <li class="list-group-item">Dapibus ac facilisis in</li>
-            <li class="list-group-item">Morbi leo risus</li>
-            <li class="list-group-item">Porta ac consectetur ac</li>
-            <li class="list-group-item">Repository N</li>
-        </ul>
-    </div>
+    <div class="container-fluid ">
+        <div class="row">
+            <div class="col">
+            </div>
+            <div class="col-10">
+                <div class="search-div">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-primary my-2 my-sm-0" type="button"> Pesquisar usuário </button>
+                </div>
+                <div class="card user-detail-div">
+                    <div class="card-header">
+                        Featured
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Special title treatment</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="repo-list-div">
+                    <ul class="list-group">
+                        <li class="list-group-item">Repository 1</li>
+                        <li class="list-group-item">Dapibus ac facilisis in</li>
+                        <li class="list-group-item">Morbi leo risus</li>
+                        <li class="list-group-item">Porta ac consectetur ac</li>
+                        <li class="list-group-item">Repository N</li>
+                    </ul>
+                </div>
 
-    <div class="alert alert-primary" role="alert">
-        Hello! Bootstrap is Working now
-    </div>
+                <div class="alert alert-primary" role="alert">
+                    Hello! Bootstrap is Working now
+                </div>
 
-    <br />
-    <br />
-    <button type="button" onclick="sillyAlert();" class="btn btn-outline-primary"> Silly! </button>
-    <br />
-    <br />
+                <br />
+                <br />
+                <button type="button" onclick="sillyAlert();" class="btn btn-outline-primary"> Silly! </button>
+                <br />
+                <br />
+            </div>
+            <div class="col">
+            </div>
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
