--- a/index.html
+++ b/index.html
@@ -17,34 +17,23 @@
     <div class="container-fluid ">
         <div class="row">
             <div class="col">
+                <ul>
+                    <li><a href="#/home">Home</a></li>
+                    <li><a href="#/repo">Page 1</a></li>
+                    <li><a href="#/user">Page 2</a></li>
+                </ul>
             </div>
-            <div class="col-10">
+            <div class="col-6">
                 <div class="search-div">
                     <div class="input-group mb-3 mt-3">
-                        <input type="text" class="form-control" placeholder="Nome do usuário do Github"
+                        <input type="text" class="form-control" placeholder="Nome do usuário Github"
                             aria-label="Nome do usuário do Github" aria-describedby="button-addon2">
                         <div class="input-group-append">
                             <button class="btn btn-outline-dark" type="button" id="button-addon2">Buscar</button>
                         </div>
                     </div>
                 </div>
-                <div class="card user-detail-div mb-3">
-                    <div class="card-header">
-                        Detalhes do Usuário
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Special title treatment</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    </div>
-                </div>
-                <div class="repo-list-div">
-                    <ul class="list-group">
-                        <li class="list-group-item">Repository 1</li>
-                        <li class="list-group-item">Dapibus ac facilisis in</li>
-                        <li class="list-group-item">Morbi leo risus</li>
-                        <li class="list-group-item">Porta ac consectetur ac</li>
-                        <li class="list-group-item">Repository N</li>
-                    </ul>
+                <div id="router-div" class="router-div">
                 </div>
             </div>
             <div class="col">
