--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             border-bottom: 1px solid rgba(0, 0, 0, .15);
             padding: 8px;
             line-height: 1.4rem;
-            background: #f3f7f7;
+            background: rgba(0, 0, 0, .03);
         }
 
         .avatar-img-div {
@@ -73,7 +73,7 @@
             font-weight: 700;
             font-size: 16px;
             color: rgba(0, 0, 0, .8);
-            background: #f3f7f7;
+            background: rgba(0, 0, 0, .03);
         }
 
         .about-text-div {
@@ -90,6 +90,44 @@
         }
     </style>
 
+    <nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand my-navbar" href="#/home">
+            <img src="/desafioFrontend/image/example-icon.png" width="30" height="30" alt="">
+            Home
+        </a>
+    </nav>
+    <div class="container-fluid ">
+        <div class="row">
+            <div class="col">
+            </div>
+            <div class="col-6">
+                <div class="search-div">
+                    <div class="input-group mb-3 mt-3">
+                        <input id="username-input" type="text" class="form-control" placeholder="Nome do usuário Github"
+                            aria-label="Nome do usuário do Github" aria-describedby="button-addon2">
+                        <div class="input-group-append">
+                            <button onclick="handleUserSearch()" class="btn btn-dark" type="button"
+                                id="user-search-button">Buscar</button>
+                        </div>
+                    </div>
+                </div>
+                <div id="router-div" class="router-div">
+                </div>
+            </div>
+            <div class="col">
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
     <script>
         var routes = {};
         var templates = {};
@@ -105,13 +143,18 @@
         function router() {
             let element = document.getElementById('router-div');
             let hash = location.hash
-            let url = hash.slice(1) || '/';
+            let url = "/" + hash.split("/")[1] || '/';
+            let pathVariable = hash.split("/")[2] || '';
             let route = routes[url];
             if (element) {
                 element.innerHTML = ""
                 let builders = templates[route.template]
                 builders.forEach(builder => {
-                    builder().then((content) => element.innerHTML = element.innerHTML + content)
+                    if (builder.length == 0)
+                        builder().then((content) => element.innerHTML = element.innerHTML + content)
+                    else
+                        if (pathVariable && pathVariable !== '')
+                            builder(pathVariable).then((content) => element.innerHTML = element.innerHTML + content)
                 });
             }
         }
@@ -119,27 +162,49 @@
         template('home', [() => {
             return new Promise((resolve) => {
                 resolve(`
-                <div class="card user-detail-div mb-3">
-                    <div class="card-header">
-                        Informações
+                        <div class="card user-detail-div mb-3">
+                            <div class="card-header">
+                                </div>
+                            <div class="card-body">
+                                <p class="card-text"> Procure por usuários do Github na caixa de pesquisa acima. ! </p>
+                            </div>
                         </div>
-                    <div class="card-body">
-                        <p class="card-text"> Procure por usuários do Github no componente de pesquisa acima </p>
-                    </div>
-                </div>
-                `)
+                        `)
             })
         }]);
+
         template('repo', [() => {
-            return new Promise((resolve) => resolve(`
-                <h1> This is a repository </h1>
-                `
-            ))
+            return fetchGithubRepo('repo-name')
+                .then((repo) => {
+                    return `
+                            <div class="user-detail-div mb-3 ">
+                                <div class="container-fluid">
+                                    <div class="row ornament-div">
+                                    </div>
+                                    <div class="row user-detail-many-div">
+                                        <div class="user-detail-many-content-div">
+                                            <div class="top">
+                                                <div class="name mt-1">${repo.name || "Username Missing"}</div>
+                                                <div class="login">${repo.description || "Descrição do indisponível"} </div>
+                                                <div class="mail">(${repo.html_url || "email indisponível"})</div>
+                                            </div>
+                                            <div class="bottom">
+                                                <div class="follow-div">
+                                                    <span class="badge badge-primary badge-pill">Followers ${repo.stargazers_count || "0"}</span>
+                                                    <span class="badge badge-primary badge-pill">Following ${repo.language || ""}</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        `
+                })
         }]);
 
         template('user',
-            [() => {
-                return fetchGithubUser('acrackintheice')
+            [(username) => {
+                return fetchGithubUser(username)
                     .then((user) => {
                         return `
                                         <div class="user-detail-div mb-3 ">
@@ -172,40 +237,40 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    `
+                                            `
                     })
             },
-            () => {
-                return fetchGithubUserRepos('acrackintheice')
+            (username) => {
+                return fetchGithubUserRepos(username)
                     .then((repos) => {
                         repos.sort((a, b) => parseFloat(b.stargazers_count) - parseFloat(a.stargazers_count))
                         let component = `
-                        <div class="card">
-                            <div class="card-header">
-                                Repositórios
-                            </div>
-                            <div class="card-body">
-                            
-                        <ul class='list-group repo-list'>
-                        `
+                                <div class="card">
+                                    <div class="card-header">
+                                        Repositórios
+                                    </div>
+                                    <div class="card-body">
+                                    
+                                <ul class='list-group repo-list'>
+                                `
                         for (const repo of repos) {
                             component = component + `
-                                <li class="list-group-item mb-2">
-                                    <div class="repo-list-item-div">
-                                        <div class="repo-name-div">
-                                            ${repo.name}
-                                        </div>
-                                        <div class="repo-details-div">
-                                            <a href="#/repo">Detalhes</a>
-                                        </div>
-                                    </div>
-                                </li>
-                            `
+                                        <li class="list-group-item mb-2">
+                                            <div class="repo-list-item-div">
+                                                <div class="repo-name-div">
+                                                    ${repo.name}
+                                                </div>
+                                                <div class="repo-details-div">
+                                                    <a href="#/repo">Detalhes</a>
+                                                </div>
+                                            </div>
+                                        </li>
+                                    `
                         }
                         component = component + ` 
-                                    </ul>
-                                </div>
-                            </div> `
+                                            </ul>
+                                        </div>
+                                    </div> `
                         return component
                     })
             }]
@@ -238,51 +303,20 @@
             return repo;
         }
 
+        function handleUserSearch() {
+            window.location.href = "#/user/" + $('#username-input').val();
+        }
+
+        $(document).ready(function () {
+            $('#username-input').on('keypress', (event) => {
+                var keycode = (event.keyCode ? event.keyCode : event.which);
+                if (keycode == '13') {
+                    $('#user-search-button').click()
+                }
+            });
+        });
     </script>
-
-
-    <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand my-navbar"href="#/home">
-            <img src="/desafioFrontend/image/example-icon.png" width="30" height="30" alt="">
-            Home
-        </a>
-    </nav>
-    <div class="container-fluid ">
-        <div class="row">
-            <div class="col">
-                <ul>
-                    <li><a href="#/home">Home</a></li>
-                    <li><a href="#/user">Page 2</a></li>
-                </ul>
-            </div>
-            <div class="col-6">
-                <div class="search-div">
-                    <div class="input-group mb-3 mt-3">
-                        <input type="text" class="form-control" placeholder="Nome do usuário Github"
-                            aria-label="Nome do usuário do Github" aria-describedby="button-addon2">
-                        <div class="input-group-append">
-                            <button class="btn btn-dark" type="button" id="button-addon2">Buscar</button>
-                        </div>
-                    </div>
-                </div>
-                <div id="router-div" class="router-div">
-                </div>
-            </div>
-            <div class="col">
-            </div>
-        </div>
-    </div>
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-    <!--   <script src="/desafioFrontend/js/main.js"></script> -->
+    <script src="/desafioFrontend/js/main.js"></script>
 </body>
 
 </html>
