--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
             text-align: center;
             width: 100%;
         }
+
+        .home-message-div{
+            text-align: center;    
+        }
     </style>
 
     <nav class="navbar navbar-light bg-light">
@@ -152,17 +156,15 @@
             let element = document.getElementById('router-div');
             let hash = location.hash
             let url = "/" + hash.split("/")[1] || '/';
-            let pathVariable = hash.split("/")[2] || '';
+            let slicedOnce = hash.slice(2)
+            let pathVariable = slicedOnce.slice(slicedOnce.indexOf("/") + 1);
             let route = routes[url];
             if (element) {
                 element.innerHTML = ""
                 let builders = templates[route.template]
-                let lastIndex = -1;
                 builders.forEach(builder => {
                     if (builder.length == 0)
-                        builder().then((content) => {
-
-                        })
+                        builder().then((content) => builder(pathVariable).then((content) => element.innerHTML = element.innerHTML + content))
                     else
                         if (pathVariable && pathVariable !== '')
                             if (builders.indexOf(builder) == 0)
@@ -179,7 +181,7 @@
                         <div class="card user-detail-div mb-3">
                             <div class="card-header">
                                 </div>
-                            <div class="card-body">
+                            <div class="card-body home-message-div">
                                 <p class="card-text"> Procure por usuários do Github na caixa de pesquisa acima. ! </p>
                             </div>
                         </div>
@@ -187,8 +189,8 @@
             })
         }]);
 
-        template('repo', [() => {
-            return fetchGithubRepo('repo-name')
+        template('repo', [(repofullname) => {
+            return fetchGithubRepo(repofullname)
                 .then((repo) => {
                     return `
                             <div class="user-detail-div mb-3 ">
@@ -227,7 +229,7 @@
                                                 </div>
                                                 <div class="row user-detail-many-div">
                                 `
-                        if (user.login) 
+                        if (user.login)
                             content = content + `
                                                     <div class="avatar-img-div centered">
                                                         <img src="${user.avatar_url || ""}"/>
@@ -285,7 +287,7 @@
                                                     ${repo.name}
                                                 </div>
                                                 <div class="repo-details-div">
-                                                    <a href="#/repo">Detalhes</a>
+                                                    <a href="#/repo/${repo.full_name}">Detalhes</a>
                                                 </div>
                                             </div>
                                         </li>
@@ -321,8 +323,8 @@
             return repos;
         }
 
-        async function fetchGithubRepo(reponame) {
-            const response = await fetch('https://api.github.com/repos/' + reponame);
+        async function fetchGithubRepo(repofullname) {
+            const response = await fetch('https://api.github.com/repos/' + repofullname);
             const repo = await response.json();
             return repo;
         }
