--- a/local-version/index.html
+++ b/local-version/index.html
@@ -201,7 +201,7 @@ template('repo', [(repofullname) => {
                     <div class="repo-detail-div mb-3 ">
                         <div class="container-fluid">
                             <div class="row ornament-div">
-                                <img src="/desafioFrontend/open-iconic/svg/info.svg" />
+                                <img src="/desafioFrontend/open-iconic/png/info-3x.png" />
                             </div>
                             <div class="row repo-many-div">
                                 <div class="repo-detail-content-div">
@@ -213,8 +213,8 @@ template('repo', [(repofullname) => {
                                     </div>
                                     <div class="bottom">
                                         <div class="follow-div">
-                                            <span class="badge badge-info"> <img src="/desafioFrontend/open-iconic/svg/code.svg" /> ${repo.language || ""} </span>
-                                            <span class="badge badge-info"> <img src="/desafioFrontend/open-iconic/svg/star.svg" /> ${repo.stargazers_count || "0"} </span>
+                                            <span class="badge badge-info"> <img src="/desafioFrontend/open-iconic/png/code-2x.png" /> ${repo.language || ""} </span>
+                                            <span class="badge badge-info"> <img src="/desafioFrontend/open-iconic/png/star-2x.png" /> ${repo.stargazers_count || "0"} </span>
                                             
                                         </div>
                                     </div>
@@ -240,7 +240,7 @@ template('user',
                                 <div class="user-detail-div mb-3 ">
                                     <div class="container-fluid">
                                         <div class="row ornament-div">
-                                            <img src="/desafioFrontend/open-iconic/svg/info.svg">
+                                            <img src="/desafioFrontend/open-iconic/png/info-3x.png">
                                         </div>
                                         <div class="row user-detail-many-div">
                         `
