Arruma pequenos problemas de interface

--- a/local-version/index.html
+++ b/local-version/index.html
@@ -312,7 +312,7 @@
                                                 <div class="bottom">
                                                     <div class="follow-div">
                                                         <span class="badge badge-primary badge-pill">Followers ${user.followers || "0"}</span>
-                                                        <span class="badge badge-primary badge-pill">Following ${user.following || ""}</span>
+                                                        <span class="badge badge-primary badge-pill">Following ${user.following || "0"}</span>
                                                     </div>
                                                 </div>
                                             </div>
