Aplica pequenas modificações de interface

--- a/local-version/index.html
+++ b/local-version/index.html
@@ -32,7 +32,11 @@
             display: flex;
             justify-content: space-between;
             width: 100%;
-            padding: 8px 8px 8px 8px;
+            padding: 16px;
+        }
+
+        .repo-detail-content-div>.name {
+            font-size: 20px;
         }
 
         .user-detail-many-content-div {
@@ -83,6 +87,7 @@
             font-size: 16px;
             color: rgba(0, 0, 0, .8);
             background: rgba(0, 0, 0, .03);
+            padding: 12px;
         }
 
         .about-text-div {
@@ -110,34 +115,34 @@
             text-align: center;
         }
 
-        .repo-lang-star{
+        .repo-lang-star {
             display: flex;
         }
 
-        .label-with-count{
+        .label-with-count {
             display: flex;
-            border: 1px solid rgba(27,31,35,.2);
+            border: 1px solid rgba(27, 31, 35, .2);
             border-radius: 4px;
             font-size: 12px;
             align-items: center;
         }
 
-        .label-prepend{
+        .label-prepend {
             display: flex;
             align-items: center;
             background-color: #eff3f6;
-            background-image: linear-gradient(-180deg,#fafbfc,#eff3f6 90%);
+            background-image: linear-gradient(-180deg, #fafbfc, #eff3f6 90%);
             color: #24292e;
             font-weight: 600;
             padding: 3px 10px;
-            border-right: 1px solid rgba(27,31,35,.2);
+            border-right: 1px solid rgba(27, 31, 35, .2);
         }
 
-        .count{
+        .count {
             padding: 3px 10px;
         }
 
-        .language-badge{
+        .language-badge {
             display: flex;
             align-items: center;
         }
